fix command-line dumps

--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -2232,7 +2232,7 @@
         Javascript: Add option to control default show / hide state of Table of Contents. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_37" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_38" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
       </li>
       <li>
-        Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a>
+        Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible" class="xowa-visited">Diagnostics/Javascript/Collapsible</a>
       </li>
       <li>
         Javascript: Add option to control default show / hide state of NavFrames. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_41" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/NavFrame.html" id="xolnki_42" title="Diagnostics/Javascript/NavFrame">Diagnostics/Javascript/NavFrame</a>
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4391,7 +4391,7 @@
         Wikisource.Page: Support onlysection; EX:&lt;pages onlysection="a"/&gt;.
       </li>
       <li>
-        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         Gui.Url_bar: Open articles with same name as language code; EX:war -&gt; current_wiki/wiki/war, not war.wikipedia.org.
