--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -4304,7 +4304,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Pass display_title info to new page_banner manager.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://en.wikipedia.org/wiki/gzip" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/gzip</a> <a href="http://xowa.org/home/wiki/Diagnostics/ParserFunctions/DisplayTitle.html" id="xolnki_57" title="Diagnostics/ParserFunctions/DisplayTitle">Diagnostics/ParserFunctions/DisplayTitle</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://en.wikipedia.org/wiki/gzip" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/gzip</a> <a href="http://xowa.org/home/wiki/Diagnostics/ParserFunctions/DisplayTitle.html" id="xolnki_57" title="Diagnostics/ParserFunctions/DisplayTitle" class="xowa-visited">Diagnostics/ParserFunctions/DisplayTitle</a>
       </dd>
     </dl>
     <ul>
