--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -234,7 +234,7 @@
           </div>
         </td>
         <td>
-          <a href="http://wikimediafoundation.org" rel="nofollow" class="external free">http://wikimediafoundation.org</a>
+          <a href="http://foundation.wikimedia.org" rel="nofollow" class="external free">http://foundation.wikimedia.org</a>
         </td>
         <td>
         </td>
