--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -126,7 +126,7 @@
           n
         </td>
         <td class='cell_center'>
-          2018-07-07
+          2018-11-14
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -151,41 +151,6 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("commons.wikimedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          de.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2018-03-01
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("de.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("de.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("de.wikipedia.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -230,7 +195,7 @@
           n
         </td>
         <td class='cell_center'>
-          2018-07-10
+          2018-11-15
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -255,6 +220,111 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wikivoyage.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2018-11-18
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikivoyage.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikivoyage.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikivoyage.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2018-07-01
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikivoyage.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2018-12-19
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikivoyage.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikivoyage.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikivoyage.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -362,13 +432,48 @@
       </tr>
       <tr>
         <td>
+          ur.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2018-12-09
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("ur.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("ur.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("ur.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           www.wikidata.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2018-07-10
+          2018-11-14
         </td>
         <td class='cell_center'>
           2017-03-20
