--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -34,7 +34,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Redlink.html" id="xolnki_4" title="Diagnostics/Javascript/Redlink">Diagnostics/Javascript/Redlink</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_5" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_5" title="Diagnostics/Javascript/Collapsible" class="xowa-visited">Diagnostics/Javascript/Collapsible</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/NavFrame.html" id="xolnki_6" title="Diagnostics/Javascript/NavFrame">Diagnostics/Javascript/NavFrame</a>
@@ -43,7 +43,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Sortable.html" id="xolnki_7" title="Diagnostics/Javascript/Sortable">Diagnostics/Javascript/Sortable</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Reference_tooltips.html" id="xolnki_8" title="Diagnostics/Javascript/Reference tooltips">Diagnostics/Javascript/Reference_tooltips</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Reference_tooltips.html" id="xolnki_8" title="Diagnostics/Javascript/Reference tooltips" class="xowa-visited">Diagnostics/Javascript/Reference_tooltips</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math">Diagnostics/Math</a> (currently via MathJax)
@@ -74,7 +74,7 @@
         <a href="http://xowa.org/home/wiki/Diagnostics/ParserFunctions/All.html" id="xolnki_15" title="Diagnostics/ParserFunctions/All">Diagnostics/ParserFunctions/All</a> 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/ParserFunctions/DisplayTitle.html" id="xolnki_16" title="Diagnostics/ParserFunctions/DisplayTitle">Diagnostics/ParserFunctions/DisplayTitle</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/ParserFunctions/DisplayTitle.html" id="xolnki_16" title="Diagnostics/ParserFunctions/DisplayTitle" class="xowa-visited">Diagnostics/ParserFunctions/DisplayTitle</a>
           </li>
         </ul>
       </li>
