--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -316,7 +316,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_49" title="Help/License/Code">License/Code</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_49" title="Help/License/Code" class="xowa-visited">License/Code</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_50" title="Help/License/Docs">License/Docs</a>
@@ -335,7 +335,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_53" title="Help/Release schedule">Release schedule</a>
+              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_53" title="Help/Release schedule" class="xowa-visited">Release schedule</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/Roadmap.html" id="xolnki_54" title="Help/Roadmap">Roadmap</a>
