--- a/home/wiki/App/Setup/Update/In-app.html
+++ b/home/wiki/App/Setup/Update/In-app.html
@@ -178,7 +178,7 @@
       </li>
     </ul>
     <p>
-      For more information on manual updates, see <a href="http://xowa.org/home/wiki/App/Setup/Update/Manual.html" id="xolnki_5" title="App/Setup/Update/Manual">the manual update help page</a>
+      For more information on manual updates, see <a href="http://xowa.org/home/wiki/App/Setup/Update/Manual.html" id="xolnki_5" title="App/Setup/Update/Manual" class="xowa-visited">the manual update help page</a>
     </p>
   
     </div>
