--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -1497,7 +1497,7 @@
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
