--- a/home/wiki/Help/Overview.html
+++ b/home/wiki/Help/Overview.html
@@ -100,13 +100,13 @@
       </li>
     </ul>
     <p>
-      For a full list, see <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online">Dashboard/Import/Online</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_3" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+      For a full list, see <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_3" title="Dashboard/Image databases">Dashboard/Image_databases</a>
     </p>
     <h2>
       <span class="mw-headline" id="Philosophy">Philosophy</span>
     </h2>
     <p>
-      XOWA is free software. The code is open source under the AGPLv3 license, and available to anyone for review or modification. See <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_4" title="Help/License/Code">Help/License/Code</a> for more information as well as <a href="https://github.com/gnosygnu/xowa" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa</a>.
+      XOWA is free software. The code is open source under the AGPLv3 license, and available to anyone for review or modification. See <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_4" title="Help/License/Code" class="xowa-visited">Help/License/Code</a> for more information as well as <a href="https://github.com/gnosygnu/xowa" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa</a>.
     </p>
     <p>
       XOWA advocates free content. All documentation and project artifacts are provided under the Creative Commons CC BY-NC-SA license. See <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_5" title="Help/License/Docs">Help/License/Docs</a> for more information.
