--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -68,7 +68,7 @@
       <span class="mw-headline" id="Disclaimer">Disclaimer</span>
     </h2>
     <p>
-      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code">Help/License/Code</a>.
+      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code" class="xowa-visited">Help/License/Code</a>.
     </p>
     <h2>
       <span class="mw-headline" id="Release_notes">Release notes</span>
@@ -88,7 +88,7 @@
       For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
     </p>
     <p>
-      For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
+      For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule" class="xowa-visited">the release schedule</a>.
     </p>
     <h2>
       <span class="mw-headline" id="New_users">New users</span>
@@ -169,7 +169,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -373,7 +373,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
