--- a/home/wiki/App/UI/Night_mode.html
+++ b/home/wiki/App/UI/Night_mode.html
@@ -244,7 +244,7 @@
     </p>
   <div id="catlinks" class="catlinks">
 <div id="mw-normal-catlinks" class="mw-normal-catlinks">
-<a href="/wiki/Special:Categories" title="Special:Categories">Categories</a>:
+<a href="/wiki/Special:Categories" title="Special:Categories">Category</a>:
 <ul>
 <li>
 <a href="/wiki/Category:Global_config" title="Category:Global config">Global config</a>
