--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -224,6 +224,41 @@
       </tr>
       <tr>
         <td>
+          en.wikiversity.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2018-12-27
+        </td>
+        <td class='cell_center'>
+          2017-03-20
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikiversity.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikiversity.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikiversity.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           en.wikivoyage.org
         </td>
         <td class='cell_center'>
@@ -363,13 +398,47 @@
       </tr>
       <tr>
         <td>
+          simple.wikipedia.org - Copy
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2019-01-01
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia.org - Copy")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia.org - Copy")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org - Copy")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           simple.wikipedia.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2018-07-01
+          2019-01-01
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -394,6 +463,40 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          simple.wikipedia.org_old
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2019-01-01
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia.org_old")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia.org_old")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org_old")'>Search</button>
         </td>
       </tr>
       <tr>
