--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          4.5.10.1707 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
+          4.5.26.1810 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -54,7 +54,7 @@
           build date:
         </td>
         <td>
-          2017-07-01 12:10:30
+          2019-01-07 11:59:47
         </td>
       </tr>
       <tr>
@@ -149,6 +149,27 @@
                   </li>
                   <li>
                     250+ defect detection
+                  </li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://github.com/desb42" rel="nofollow" class="external text">desb42</a>
+              </td>
+              <td>
+                <ul>
+                  <li>
+                    HTTP server improvements
+                  </li>
+                  <li>
+                    HTML emulation patches
+                  </li>
+                  <li>
+                    20+ pull requests
+                  </li>
+                  <li>
+                    multiple defect detection
                   </li>
                 </ul>
               </td>
