--- a/home/wiki/Options/Firefox_addon.html
+++ b/home/wiki/Options/Firefox_addon.html
@@ -19,7 +19,7 @@
     
   <div id="catlinks" class="catlinks">
 <div id="mw-normal-catlinks" class="mw-normal-catlinks">
-<a href="/wiki/Special:Categories" title="Special:Categories">Categories</a>:
+<a href="/wiki/Special:Categories" title="Special:Categories">Category</a>:
 <ul>
 <li>
 <a href="/wiki/Category:To_delete" title="Category:To delete">To delete</a>
